Removed old Camera class in Models directory and created EntityShaderConstants class.

--- a/SimpleGameEngine/SimpleGameEngine.vcxproj
+++ b/SimpleGameEngine/SimpleGameEngine.vcxproj
@@ -18,6 +18,7 @@
     <ClInclude Include="src\SimpleGameEngine\Renderers\RenderEngine.h" />
     <ClInclude Include="src\SimpleGameEngine\Renderers\SkyboxRenderer.h" />
     <ClInclude Include="src\SimpleGameEngine\Renderers\TerrainRenderer.h" />
+    <ClInclude Include="src\SimpleGameEngine\Shaders\EntityShaderConstants.h" />
     <ClInclude Include="src\SimpleGameEngine\Utility\Generic.h" />
     <ClInclude Include="src\SimpleGameEngine\Log.h" />
     <ClInclude Include="src\SimpleGameEngine\Logic\IntersectionTester.h" />
@@ -30,7 +31,6 @@
     <ClInclude Include="src\SimpleGameEngine\IO\IOException.h" />
     <ClInclude Include="src\SimpleGameEngine\IO\FileUtils.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\BoundingBox.h" />
-    <ClInclude Include="src\SimpleGameEngine\Models\Camera.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\Entity.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\Material.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\GeometryModel.h" />
@@ -68,7 +68,6 @@
     <ClCompile Include="src\SimpleGameEngine\IO\IOException.cpp" />
     <ClCompile Include="src\SimpleGameEngine\IO\FileUtils.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\BoundingBox.cpp" />
-    <ClCompile Include="src\SimpleGameEngine\Models\Camera.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\Entity.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\Material.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\GeometryModel.cpp" />
@@ -76,6 +75,7 @@
     <ClCompile Include="src\SimpleGameEngine\Renderers\RenderEngine.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Renderers\SkyboxRenderer.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Renderers\TerrainRenderer.cpp" />
+    <ClCompile Include="src\SimpleGameEngine\Shaders\EntityShaderConstants.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Shaders\Shader.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Display\DisplayException.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Display\Window.cpp" />
