Added log messages in Loader.cpp and post-build event to copy the SimpleGameEngine.dll to the Sandbox bin directory.

--- a/SimpleGameEngine/SimpleGameEngine.vcxproj
+++ b/SimpleGameEngine/SimpleGameEngine.vcxproj
@@ -175,6 +175,9 @@
     <Link>
       <AdditionalDependencies>SOIL.lib;glfw3.lib;glew32s.lib;opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>IF EXIST ..\bin\Debug-x64\SimpleGameEngine\SimpleGameEngine.dll\ (xcopy /Q /E /Y /I ..\bin\Debug-x64\SimpleGameEngine\SimpleGameEngine.dll ..\bin\Debug-x64\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Debug-x64\SimpleGameEngine\SimpleGameEngine.dll ..\bin\Debug-x64\Sandbox &gt; nul)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
