--- a/SimpleGameEngine/SimpleGameEngine.vcxproj
+++ b/SimpleGameEngine/SimpleGameEngine.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\SimpleGameEngine\Models\LightSource.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\HeightMap.h" />
     <ClInclude Include="src\SimpleGameEngine\Shaders\SkyboxShaderConstants.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\SkyboxRenderModel.h" />
@@ -62,6 +63,7 @@
     <ClInclude Include="src\SimpleGameEngine\Shaders\TerrainShaderConstants.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\SimpleGameEngine\Models\LightSource.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\HeightMap.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Shaders\SkyboxShaderConstants.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\SkyboxRenderModel.cpp" />
