--- a/SimpleGameEngine/SimpleGameEngine.vcxproj.filters
+++ b/SimpleGameEngine/SimpleGameEngine.vcxproj.filters
@@ -165,6 +165,9 @@
     <ClInclude Include="src\SimpleGameEngine\Models\LightSource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\SimpleGameEngine\Renderers\RenderScene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\SimpleGameEngine\Application.cpp">
@@ -303,6 +306,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\SimpleGameEngine\Models\LightSource.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\SimpleGameEngine\Renderers\RenderScene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
